# checkers-engine-api

./: .dockerignore  .gitignore  README.md  ai.js  package-lock.json  package.json  script.js  server.js
.github/workflows/: ci.yml  deploy-aws.yml
app/: ai.js  gameData.js  helpers.js  index.html  script.js
app/css/: style.css
app/sass/: _beforegame.scss  _board.scss  _buttons.scss  _gameinfo.scss  _global.scss  _graveyard.scss  _legalmoves.scss  _pieces.scss  _variables.scss  style.scss
checkers-ui/: board.js
checkers-ui-vue/: nuxt.config.ts  package.json  tsconfig.app.json  vite.config.ts
checkers-ui-vue/src/: App.vue  boardHelpers.ts  boardPosition.ts  config.ts  helpers.ts  main.ts  types.ts
checkers-ui-vue/src/components/: BoardComponent.vue  BoardSquare.vue  BoardWrapper.vue  ButtonContainer.vue  CheckersBoard.vue  CheckersPiece.vue  EngineEvaluation.vue  EvaluationContainer.vue  GameInfo.vue  MoveInput.vue  PieceComponent.vue  PieceSpawner.vue  PieceToolbox.vue  PieceTrash.vue  PlayerColorChoice.vue  RemovePieces.vue  (+2 more)
checkers-ui/sass/: _pieces.scss
checkers-web/: .env.example  Dockerfile  env.d.ts  eslint.config.ts  nuxt.config.ts  package.json  tsconfig.app.json  vitest.config.ts
checkers-web/src/: App.vue  config.ts  types.ts
engine-api/: tsconfig.json
engine-api/src/: index.ts  model.ts
ml-core/: .env.example  pyproject.toml  train_1.py  train_2.py  train_3.py
ml-core/dataset/: merge_data.py  result_spread.py
models/: engine_1.onnx  engine_1.onnx.data  engine_2.onnx  engine_2.onnx.data  engine_3.onnx  engine_3.onnx.data
(+95 files in other folders)
