[project]
name = "checkers-ai-train"
version = "0.1.0"
description = "Train of checkers engine for my JS app"
requires-python = ">=3.13"
dependencies = [
    "black>=26.3.0",
    "onnx>=1.15.0",
    "onnxscript>=0.6.0",
    "pandas>=3.0.1",
    "torch>=2.2.0",
]
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
